Add description,  icon and stylesheet to head html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="eng">
 <head>
     <meta charset="UTF-8">
+    <meta name="description"
+        content="Opis co ma się pojawić w wyszukiwaniu google.">
+    <meta name="keywords"
+        content="IT, programowanie, programming, junior, CV, junior developer, junior web developer, frontend, backend, front-end, back-end, fullstack, javascript, HTML, CSS, portfolio, wizytówka, code, coding, pisanie kodu, 2023">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./img/working_on_it.jpg" type="img/logo">
+    <link rel="stylesheet" href="style.css">
     <title>Portfolio XYZ</title>
 </head>
 <body>
