Add outline of sections in html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
     <title>Portfolio XYZ</title>
 </head>
 <body>
-    
+    <header>
+<div class="header_news"></div>
+<div class="header_main"></div>
+    </header>
+    <nav>
+
+    </nav>
+    <section class="about_me">
+
+    </section>
+    <section class="skills">
+
+    </section>
+    <section class="portfolio">
+
+    </section>
+    <section class="contact">
+
+    </section>
+    <footer></footer>
 </body>
 </html>
