Add nav categories to index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
 <div class="header_main"></div>
     </header>
     <nav>
-
+<ul>
+    <li><img src="./img/menu/home.png" alt="Homepage"></li>
+    <li>o mnie</li>
+    <li>blog</li>
+    <li>projekty</li>
+    <li>cv</li>
+    <li>kontakt</li>
+    <li><img src="./img/menu/bulb-off.png" alt="Light mode"></li>
+    <li><img src="./img/menu/poland-flag-icon.png" alt="Polish flag"><img src="./img/menu/toggle-left.svg" alt="Language select"><img src="./img/menu/united-kingdom-flag-icon.png" alt="United Kingdom flag"></li>
+</ul>
     </nav>
     <section class="about_me">
 
