--- a/index.html
+++ b/index.html
@@ -1,33 +1,42 @@
 <!DOCTYPE html>
 <html lang="eng">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="description"
-        content="Opis co ma się pojawić w wyszukiwaniu google.">
+    <meta name="description" content="Opis co ma się pojawić w wyszukiwaniu google.">
     <meta name="keywords"
         content="IT, programowanie, programming, junior, CV, junior developer, junior web developer, frontend, backend, front-end, back-end, fullstack, javascript, HTML, CSS, portfolio, wizytówka, code, coding, pisanie kodu, 2023">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="icon" href="./img/working_on_it.jpg" type="img/logo">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
     <title>Portfolio XYZ</title>
 </head>
+
 <body>
     <header>
-<div class="header_news"></div>
-<div class="header_main"></div>
+        <div class="header_news"></div>
+        <div class="header_main"></div>
     </header>
     <nav>
-<ul>
-    <li><img src="./img/menu/home.png" alt="Homepage"></li>
-    <li>o mnie</li>
-    <li>blog</li>
-    <li>projekty</li>
-    <li>cv</li>
-    <li>kontakt</li>
-    <li><img src="./img/menu/bulb-off.png" alt="Light mode"></li>
-    <li><img src="./img/menu/poland-flag-icon.png" alt="Polish flag"><img src="./img/menu/toggle-left.svg" alt="Language select"><img src="./img/menu/united-kingdom-flag-icon.png" alt="United Kingdom flag"></li>
-</ul>
+        <ul>
+            <li><img src="./img/menu/home.png" alt="Homepage"></li>
+            <li>o mnie</li>
+            <li>blog</li>
+            <li>projekty</li>
+            <li>cv</li>
+            <li>kontakt</li>
+            <li><img src="./img/menu/bulb-off.png" alt="Light mode"></li>
+            <li><img src="./img/menu/poland-flag-icon.png" alt="Polish flag"><img src="./img/menu/toggle-left.svg"
+                    alt="Language select"><img src="./img/menu/united-kingdom-flag-icon.png" alt="United Kingdom flag">
+            </li>
+        </ul>
     </nav>
     <section class="about_me">
 
@@ -43,4 +52,5 @@
     </section>
     <footer></footer>
 </body>
+
 </html>
