--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!--icon-->
     <link rel="icon" href="./img/working_on_it.jpg" type="img/logo">
-
+    <!--fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;400;700&display=swap" rel="stylesheet">
-
+    <!--css-->
     <link rel="stylesheet" href="style.css">
-    <title>Portfolio XYZ</title>
+
+    <!--pod koniec projektu dać odpowiednią nazwę strony - imię i nazwisko-->
+    <title>John Kovalsky</title>
 </head>
 
 <body>
