Add name of a page in html

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3a9bce90f4.js" crossorigin="anonymous"></script>
     <!--css-->
     <link rel="stylesheet" href="style.css">
     <!--pod koniec projektu dać odpowiednią nazwę strony - imię i nazwisko-->
-    <title>John Kovalsky</title>
+    <title>Jeska portfolio</title>
 </head>
 
 <body>
