Create folder 'use' for ready-to-copy descriptions

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--css-->
     <link rel="stylesheet" href="style.css">
     <!--pod koniec projektu dać odpowiednią nazwę strony - imię i nazwisko-->
-    <title>Jeska portfolio</title>
+    <title>MyPortfolio</title>
 </head>
 
 <body>
