Add meta description in html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Opis co ma się pojawić w wyszukiwaniu google."> <!-- TODO -->
+    <meta name="description" content="Hello, World! Agnieszka on the board and I am doing my best to become Fullstack Developer. Check my portfolio and contact me or leave the feedback!">
     <meta name="keywords"
         content="IT, programowanie, programming, junior, beginner, CV, resume, junior developer, junior web developer, frontend, backend, front-end, back-end, fullstack, javascript, HTML, CSS, portfolio, wizytówka, code, coding, pisanie kodu, lookingforjob, job, work, looking, 2023">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
