Prepare hobby section only in html + edit README typo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description"
         content="Hello, World! Agnieszka on the board and I am doing my best to become Fullstack Developer. Check my portfolio and contact me or leave the feedback!">
     <meta name="keywords"
-        content="IT, programowanie, programming, junior, beginner, CV, resume, junior developer, junior web developer, frontend, backend, front-end, back-end, fullstack, javascript, HTML, CSS, portfolio, wizytówka, code, coding, pisanie kodu, lookingforjob, job, work, looking, 2023">
+        content="IT, programowanie, programming, junior, beginner, CV, resume, junior developer, junior web developer, frontend, backend, front-end, back-end, fullstack, javascript, HTML, CSS, portfolio, wizytówka, code, coding, pisanie kodu, lookingforjob, job, work, looking, 2023, 2024">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--icon-->
@@ -50,7 +50,7 @@
     <header>
         <div class="hero-img" id="home">
             <div class="hero-text">
-                <p>Hey, Agnieszka here! <br><span>I would like to</span></p>
+                <p>Hey, Agnes here! <br><span>I would like to</span></p>
                 <h1 class="hero-text-move"> [ start as Frontend Developer ]</h1>
                 <!-- be your employee, become Fullstack Developer, create breathtaking websites and apps!, get know more technologies -->
             </div>
@@ -71,14 +71,16 @@
                     <div class="text-title__line"></div>
                 </div>
                 <div class="abt-me__text--short">
-                    <p>Shortly, I discovered coding by accident and I knew, it's love from the
+                    <p>Shortly, I discovered coding by accident and then I knew, it was love from the
                         first sight! I found in programming a lot of joy by spending my time with nose into the code. My
                         patience is helping me with solving code issues and hunger of knowledge is pushing me foward. I
                         enjoy creating things that live on the internet, whather that be websites, applications or even
                         games 2D. My goal is to become Fullstack Developer. <br> <br>
                     </p>
                     <button class="abt-me__btn">Read more...</button>
-                    <div class="abt-me__quoter"><!--TODO dodać cos od siebie albo dodać ciekawy cytat?--></div>
+                    <div class="abt-me__quoter"><!--TODO dodać ciekawy cytat?-->
+                        <p><Span>"</Span>intrasting quote <span>"</span></p>
+                    </div>
                 </div>
                 <div class="abt-me__text--long">
                     <p>One day I was scribbling on paper my acctual status of raw materials in
@@ -128,16 +130,45 @@
     </section> -->
 
 
-    <!-- <section class="hobby">
+    <section class="hobby">
         <div class="text-title">
             <h2>#hobby</h2>
             <div class="text-title__line"></div>
         </div>
-    </section> -->
+        <div class="hobby-box">
+            <div class="hobby-box__img"></div>
+            <div class="hobby-box__text">
+                <h3>Carpentry</h3>
+                <p>Since I can remember I always loved to smell fresh cut of wood, but my journey with carpentry started few years ago. Self-taught with pure respect for raw wood. Love to spend my free time with no presure, where I can create somthing amezing time to time. Drawing the project and then calculating the measures, that's nothing when something is going wrong and you have to thing about alternates. I love it!</p>
+            </div>
+        </div>
+        <div class="hobby-box">
+            <div class="hobby-box__img"></div>
+            <div class="hobby-box__text">
+                <h3>Trekking</h3>
+                <p>I am the person who like to clean her head and let the stress go away. I found perfect way for that! Walking and watching the coolest places what naure can bring. Before you can see it, you have to sweat a lot, but the view will give you all back! That's really satisfying.</p>
+            </div>
+        </div>
+        <div class="hobby-box">
+            <div class="hobby-box__img"></div>
+            <div class="hobby-box__text">
+                <h3>Bicycle</h3>
+                <p>If I can't aford for trekking trip, I spend time on bike. I explore whole area where is no rush. Love to watch changes in villages and explore new roads by getting lost sometimes. I won't move from home, if I know I won't do 30km on wheels. </p>
+            </div>
+        </div>
+        <div class="hobby-box">
+            <div class="hobby-box__img"></div>
+            <div class="hobby-box__text">
+                <h3>Forest nature</h3>
+                <p>Fresh air only between the woods! My favorite color is green, so spending short walks in the forsts give a lot of joy. I have time for thinking and I can refresh myself. A lot of new ideas come to my mind or solutions for old ones. A little step aside can give you a lot and this step for me is short walk in calm forst. I really enjoy time spent between nature.</p>
+            </div>
+        </div>
+    </section>
 
 
-    <!-- <section class="counter">
-    </section> -->
+    <section class="counter">
+
+    </section>
 
 
     <!-- <section class="portfolio" id="portfolio">
