Edit hobby section in html and typo in sass burger-btn

--- a/index.html
+++ b/index.html
@@ -86,9 +86,10 @@
                     <p>One day I was scribbling on paper my acctual status of raw materials in
                         my carpentry workshop and then I had an idea - I need a program for that! And yeah... I wanted
                         to do
-                        it on my own, so I tried... Code an ERP system isn't easy to do, even a tiny one, so I start
+                        it on my own, so I tried... Code an ERP system isn't easy to do, even a tiny one, so I started
                         with
-                        baby steps and I started to like it more and more. So I was keep reading, watching tutorials or
+                        baby steps and over time coding became more and more enjoyable. So I was keep reading, watching
+                        tutorials or
                         listening podcasts and trying to code more challenging ideas.
                     </p>
                     <p>
@@ -139,28 +140,40 @@
             <div class="hobby-box__img"></div>
             <div class="hobby-box__text">
                 <h3>Carpentry</h3>
-                <p>Since I can remember I always loved to smell fresh cut of wood, but my journey with carpentry started few years ago. Self-taught with pure respect for raw wood. Love to spend my free time with no presure, where I can create somthing amezing time to time. Drawing the project and then calculating the measures, that's nothing when something is going wrong and you have to thing about alternates. I love it!</p>
+                <p>Since I can remember I always loved smell of wood after cutting, but my journey with carpentry
+                    started few years ago. Self-taught with pure respect for raw wood. Love to spend my free time with
+                    no presure, where I can create somthing amezing. Drawing the project and then calculating the
+                    measures, that's nothing when something is going wrong and you have to thing about alternates. I
+                    love it!</p>
             </div>
         </div>
         <div class="hobby-box">
             <div class="hobby-box__img"></div>
             <div class="hobby-box__text">
                 <h3>Trekking</h3>
-                <p>I am the person who like to clean her head and let the stress go away. I found perfect way for that! Walking and watching the coolest places what naure can bring. Before you can see it, you have to sweat a lot, but the view will give you all back! That's really satisfying.</p>
+                <p>I am the person who like to clean her head and let the stress go away. I found perfect way for that!
+                    Walking and watching the coolest places what naure can bring. Before you can see it, you have to
+                    force your muscles for huge effort, but the view will give you all back! That's really satisfying,
+                    when you reach the top of mountain and feel the fresh air with the best view you can imagine.</p>
             </div>
         </div>
         <div class="hobby-box">
             <div class="hobby-box__img"></div>
             <div class="hobby-box__text">
                 <h3>Bicycle</h3>
-                <p>If I can't aford for trekking trip, I spend time on bike. I explore whole area where is no rush. Love to watch changes in villages and explore new roads by getting lost sometimes. I won't move from home, if I know I won't do 30km on wheels. </p>
+                <p>If I can't aford for trekking trip, I spend time on bike. I explore whole area where is no rush. Love
+                    to watch changes in villages and explore new roads by getting lost - well... it happends sometimes.
+                    I won't move from home, if I know I won't do minimum 30km on wheels. </p>
             </div>
         </div>
         <div class="hobby-box">
             <div class="hobby-box__img"></div>
             <div class="hobby-box__text">
                 <h3>Forest nature</h3>
-                <p>Fresh air only between the woods! My favorite color is green, so spending short walks in the forsts give a lot of joy. I have time for thinking and I can refresh myself. A lot of new ideas come to my mind or solutions for old ones. A little step aside can give you a lot and this step for me is short walk in calm forst. I really enjoy time spent between nature.</p>
+                <p>Fresh air only between the woods! My favorite color is green, so spending short walks in the forsts
+                    give a lot of energy. I have time for thinking and I can refresh myself. A lot of new ideas come to
+                    my mind or solutions for old ones. As you noticed, I really enjoy time spent between nature. I am
+                    person who likes quiet and peaceful places.</p>
             </div>
         </div>
     </section>
