Move aside as div to header section in html

--- a/index.html
+++ b/index.html
@@ -48,19 +48,38 @@
 
 
     <header>
+        <!-- <div class="aside-news">
+            <div class="aside-news__box">
+                <div class="aside-news__box-img"></div>
+                <div class="aside-news__box-text">
+                    <h3>tytuł artykułu</h3>
+                    <p>krótki opis artykułu, zachęcający do przeczytania lub opisujący co w artykule zawarte</p>
+                </div>
+            </div>
+            <div class="aside-news__box">
+                <div class="aside-news__box-img"></div>
+                <div class="aside-news__box-text">
+                    <h3>tytuł artykułu</h3>
+                    <p>krótki opis artykułu, zachęcający do przeczytania lub opisujący co w artykule zawarte</p>
+                </div>
+            </div>
+            <div class="aside-news__box">
+                <div class="aside-news__box-img"></div>
+                <div class="aside-news__box-text">
+                    <h3>tytuł artykułu</h3>
+                    <p>krótki opis artykułu, zachęcający do przeczytania lub opisujący co w artykule zawarte</p>
+                </div>
+            </div>
+        </div> -->
         <div class="hero-img" id="home">
             <div class="hero-text">
-                <p>Hey, Agnes here! <br><span>I would like to</span></p>
+                <p>Hello, Agnes here! <br><span>I would like to</span></p>
                 <h1 class="hero-text-move"> [ start as Frontend Developer ]</h1>
                 <!-- be your employee, become Fullstack Developer, create breathtaking websites and apps!, get know more technologies -->
             </div>
             <div class="hero-shadow"></div>
         </div>
     </header>
-
-    <aside class="blog-info">
-        <!-- aside ma się schować i zakładka do ponownego otwarcia ma byc sticky lewa strona-->
-    </aside>
 
 
     <section class="abt-me" id="about">
