--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="nav-links">
             <a class="nav-link" href="#about">about()</a>
-            <a class="nav-link" href="#portfolio">projects()</a>
+            <a class="nav-link" href="#projects">projects()</a>
             <a class="nav-link" href="#">blog()</a>
             <a class="nav-link" href="#">resume()</a>
             <a class="nav-link" href="#contact">contact()</a>
@@ -71,9 +71,10 @@
                 </div>
             </div>
         </div> -->
-        <div class="hero-img" id="home">
+        <div class="hero hero-img" id="home">
             <div class="hero-text">
-                <p>Hello, Agnes here! <br><span>I would like to</span></p>
+                <p>Hello there! </p>
+                <p><span>My name is Agnes and I would like to</span></p>
                 <h1 class="hero-text-move"> [ start as Frontend Developer ]</h1>
                 <!-- be your employee, become Fullstack Developer, create breathtaking websites and apps!, get know more technologies -->
             </div>
@@ -203,9 +204,9 @@
     </section>
 
 
-    <!-- <section class="portfolio" id="portfolio">
+    <!-- <section class="projects" id="projects">
         <div class="text-title">
-            <h2>#portfolio</h2>
+            <h2>#projects</h2>
             <div class="text-title__line"></div>
         </div>
     </section> -->
