--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 
     <section class="abt-me" id="about">
-        <div class="container">
+        <div class="wrapper">
             <div class="abt-me__text">
                 <div class="text-title">
                     <h2>#about</h2>
@@ -131,27 +131,35 @@
 
 
     <!-- <section class="skills">
-        <div class="container">
+        <div class="wrapper">
             <div class="text-title">
-                <h2>#skills</h2>
+                <h2>#Skills</h2>
                 <div class="text-title__line"></div>
             </div>
-            <div class="skills-list">
-                <div class="skills-use">
-                    <h3>I use everyday</h3>
+            <div class="skills-tech">
+                <h3>Technologies</h3>
+                <div class="skills-tech__list>
+                    <div class="skills-tech__list-know">
+                        <h3>I know and use</h3>
+                    </div>
+                    <div class="skills-tech__list-familiar">
+                        <h3>I am familiar with</h3>
+                    </div>
+                    <div class="skills-tech__list-learn">
+                        <h3>I want to learn</h3>
+                    </div>
                 </div>
-                <div class="skills-know">
-                    <h3>I barely know</h3>
-                </div>
-                <div class="skills-learn">
-                    <h3>I want to learn</h3>
-                </div>
+            </div>
+            <div class="skills-soft">
+                <h3>Soft skills</h3>
+                    <ul></ul>
             </div>
         </div>
     </section> -->
 
 
     <section class="hobby">
+       <div class="wrapper">
         <div class="text-title">
             <h2>#hobby</h2>
             <div class="text-title__line"></div>
@@ -186,16 +194,7 @@
                     I won't move from home, if I know I won't do minimum 30km on wheels. </p>
             </div>
         </div>
-        <div class="hobby-box">
-            <div class="hobby-box__img"></div>
-            <div class="hobby-box__text">
-                <h3>Forest nature</h3>
-                <p>Fresh air only between the woods! My favorite color is green, so spending short walks in the forsts
-                    give a lot of energy. I have time for thinking and I can refresh myself. A lot of new ideas come to
-                    my mind or solutions for old ones. As you noticed, I really enjoy time spent between nature. I am
-                    person who likes quiet and peaceful places.</p>
-            </div>
-        </div>
+       </div>
     </section>
 
 
@@ -205,18 +204,22 @@
 
 
     <!-- <section class="projects" id="projects">
+    <div class="wrapper">
         <div class="text-title">
             <h2>#projects</h2>
             <div class="text-title__line"></div>
         </div>
+    </div>
     </section> -->
 
 
     <!-- <section class="contact" id="contact">
+    <div class="wrapper">
         <div class="text-title">
             <h2>#contact</h2>
             <div class="text-title__line"></div>
         </div>
+    </div>
     </section> -->
 
 
