Add new section 'exp' as experience - html

--- a/index.html
+++ b/index.html
@@ -144,6 +144,27 @@
         </div>
     </section>
 
+    <section class="exp">
+        <div class="wrapper">
+            <div class="exp-road">
+                <div class="exp-road__text">
+                    <h5>2023</h5>
+                    <p>Started my journey</p>
+                </div>
+                <div class="exp-road exp-road__line"></div>
+                <div class="exp-road__text">
+                    <h5>2024</h5>
+                    <p>Shared my portfolio to the world</p>
+                </div>
+                <div class="exp-road exp-road__line"></div>
+                <div class="exp-road__text">
+                    <h5>2025</h5>
+                    <p>Sent my first resume</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <section class="skills">
         <div class="wrapper">
@@ -155,11 +176,11 @@
                 <div class="skills-boxes__tech">
                     <h3>Technologies:</h3>
                     <div class="skills-boxes__tech-list">
-                        <p>I know and use</p>
+                        <p>I work with</p>
                         <div class="tech-imgs"></div>
                     </div>
                     <div class="skills-boxes__tech-list">
-                        <p>I am familiar with</p>
+                        <p>I am familiar with</p> <!--I've been working with recently-->
                         <div class="tech-imgs"></div>
                     </div>
                     <div class="skills-boxes__tech-list">
@@ -225,8 +246,11 @@
                 <div class="hobby-box__img"></div>
                 <div class="hobby-box__text">
                     <h3>Bicycle</h3>
-                    <p>If I can't aford for trekking trip, I spend time on bike. I explore whole area where is no rush or where the only thing racing is my heart rate when I spot an unexpected pothole.<br><br>
-                    Love to watch changes in villages and explore new roads by getting lost - well... it happends sometimes. <br><br>Here's the deal: I won't move from home, if I know I won't do minimum 30km on wheels.</p>
+                    <p>If I can't aford for trekking trip, I spend time on bike. I explore whole area where is no rush
+                        or where the only thing racing is my heart rate when I spot an unexpected pothole.<br><br>
+                        Love to watch changes in villages and explore new roads by getting lost - well... it happends
+                        sometimes. <br><br>Here's the deal: I won't move from home, if I know I won't do minimum 30km on
+                        wheels.</p>
                 </div>
             </div>
         </div>
