--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         <li>communicative person</li>
                         <li>accuracy and insight with curiosity</li>
                         <li>perseverance in the face of a problem</li>
-                        <li>analytical thinking</li>
+                        <li>teamwork</li>
                         <li>the artist's soul</li>
                         <li>willingness to learn new things</li>
                     </ul>
