Prepare colors for dark/light mode toggle - html and _colors.scss

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <a class="nav-link" href="#">resume()</a>
             <a class="nav-link" href="#contact">contact()</a>
             <!--TODO wymyśleć jak wizualnie ma się to prezentować - żarówka on/off? toggle on/off? inaczej?-->
+            <img src="./img/menu/bulb-filled.png" alt="Dark/light switch" class="toggle toggle-off">
         </div>
         <div class="nav-media">
             <hr>
@@ -49,18 +50,10 @@
 
     <aside class="aside">
         <div class="aside-news">
-            <div class="aside-news__img"></div>
-            <div class="aside-news__text">
-                <h3>tytuł artykułu</h3>
-                <p>krótki opis artykułu, zachęcający do przeczytania lub opisujący co w artykule zawarte</p>
-                <hr>
-                <p><span>data wstawienia artykułu</span></p>
-            </div>
             <div class="aside-news__box">
                 <div class="aside-news__img"></div>
                 <div class="aside-news__text">
                     <h3>tytuł artykułu</h3>
-                    <p>krótki opis artykułu, zachęcający do przeczytania lub opisujący co w artykule zawarte</p>
                     <hr>
                     <p><span>data wstawienia artykułu</span></p>
                 </div>
@@ -69,7 +62,14 @@
                 <div class="aside-news__img"></div>
                 <div class="aside-news__text">
                     <h3>tytuł artykułu</h3>
-                    <p>krótki opis artykułu, zachęcający do przeczytania lub opisujący co w artykule zawarte</p>
+                    <hr>
+                    <p><span>data wstawienia artykułu</span></p>
+                </div>
+            </div>
+            <div class="aside-news__box">
+                <div class="aside-news__img"></div>
+                <div class="aside-news__text">
+                    <h3>tytuł artykułu</h3>
                     <hr>
                     <p><span>data wstawienia artykułu</span></p>
                 </div>
