Add new section 'counter' to html

--- a/index.html
+++ b/index.html
@@ -273,7 +273,26 @@
 
     <!--TODO wjechanie img i potem efekt naliczania liczb-->
     <section class="counter">
-        
+        <div class="counter-box">
+            <img src="./img/counter/moon-stars.png" alt="Sleepless nights">
+            <h5>sleepless nights</h5>
+            <p class="counter-box--numbers">113</p>
+        </div>
+        <div class="counter-box">
+            <img src="./img/counter/battery-4.png" alt="Energy power">
+            <h5>zeal energy</h5>
+            <p class="counter-box--letters">FULLY MOTIVATED</p>
+        </div>
+        <div class="counter-box">
+            <img src="./img/counter/clock-code.png" alt="Coding time">
+            <h5>coding time</h5>
+            <p class="counter-box--numbers">550+</p>
+        </div>
+        <div class="counter-box">
+            <img src="./img/counter/browser-check.png" alt="Completed projects">
+            <h5>completed projects</h5>
+            <p class="counter-box--numbers">6</p>
+        </div>
     </section>
 
 
