Finish footer in html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
     </header>
 
-<!--TODO każde h2 ma efekt wpisywania i nie znika tylko już zostaje na stałe, a reszta wjeżdża z boku lub wyświetla się etapami np. po zdaniu z opóźnieniem-->
+    <!--TODO każde h2 ma efekt wpisywania i nie znika tylko już zostaje na stałe, a reszta wjeżdża z boku lub wyświetla się etapami np. po zdaniu z opóźnieniem-->
     <section class="abt-me" id="about">
         <div class="wrapper">
             <div class="abt-me__text">
@@ -273,22 +273,22 @@
 
     <!--TODO wjechanie img i potem efekt naliczania liczb-->
     <section class="counter">
-        <div class="counter-box">
+        <div class="counter-item">
             <img src="./img/counter/moon-stars.png" alt="Sleepless nights">
             <h5>sleepless nights</h5>
             <p class="counter-box--numbers">113</p>
         </div>
-        <div class="counter-box">
+        <div class="counter-item">
             <img src="./img/counter/battery-4.png" alt="Energy power">
             <h5>zeal energy</h5>
             <p class="counter-box--letters">FULLY MOTIVATED</p>
         </div>
-        <div class="counter-box">
+        <div class="counter-item">
             <img src="./img/counter/clock-code.png" alt="Coding time">
             <h5>coding time</h5>
             <p class="counter-box--numbers">550+</p>
         </div>
-        <div class="counter-box">
+        <div class="counter-item">
             <img src="./img/counter/browser-check.png" alt="Completed projects">
             <h5>completed projects</h5>
             <p class="counter-box--numbers">6</p>
@@ -296,29 +296,36 @@
     </section>
 
 
-    <!--TODO skończyć sekcję, kiedy będą projekty?-->
+    <!--TODO skończyć sekcję, kiedy będą projekty? sprawdzic czy da się połączyć z GH projektami(API?)-->
     <section class="projects" id="projects">
-    <div class="wrapper">
-        <div class="text-title">
-            <h2>#projects</h2>
-            <div class="text-title__line"></div>
+        <div class="wrapper">
+            <div class="text-title">
+                <h2>#projects</h2>
+                <div class="text-title__line"></div>
+            </div>
         </div>
-    </div>
     </section>
 
 
     <!--TODO bez efektów wjeżdżających, zrobić tabelę-->
     <section class="contact" id="contact">
-    <div class="wrapper">
-        <div class="text-title">
-            <h2>#contact</h2>
-            <div class="text-title__line"></div>
+        <div class="wrapper">
+            <div class="text-title">
+                <h2>#contact</h2>
+                <div class="text-title__line"></div>
+            </div>
         </div>
-    </div>
     </section>
 
-
-    <footer>
+<!--TODO media podświetlają się po najechaniu myszką-->
+    <footer class="footer">
+        <div class="footer-text">jeska-portfolio&copy; 2024</div>
+        <div class="footer-media"> 
+            <a href="#"><img src="./img/social/brand-facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="./img/social/brand-linkedin.png" alt="Linkedin"></a>
+            <a href="#"><img src="./img/social/brand-github-filled.png" alt="Github"></a>
+            <a href="#"><img src="./img/social/brand-gmail.png" alt="Gmail"></a>
+        </div>
     </footer>
 
 </body>
